Comments on RoboBoat - 2020_03_18 Report

--- a/Internal Reporting/RoboBoat - 2020_03_18/RoboBoat - 2020_03_18.md
+++ b/Internal Reporting/RoboBoat - 2020_03_18/RoboBoat - 2020_03_18.md
@@ -16,6 +16,8 @@ Members:
 # RoboBoat Meeting Time
 Below is the current state of the WhenIsGood responses I have -- I'm still waiting on Bradley's. I did @mention him on Slack once he joined, but I'm not sure if he saw it. I'll do it one more time tomorrow and email him. Currently, it's looking like Friday afternoons, which, if we're back on campus, lends itself to working on it as well. I'm also okay with having one Tuesday for a check-in of issues and Friday be dedicated to a workday, or something similar. I know you're still adjusting/transitioning to telecommuting, but is there a time that works better for you?
 
+> ***JV*** It should be able to call in most weeks at either or both of those times.
+
 ![RoboBoat Meeting Times](figures/WhenIsGood.png)**Figure 1: WhenIsGood Responses from RoboBoat Team Members**
 
 # RoboBoat System Design
@@ -25,8 +27,27 @@ As stated earlier, I think that `rtabmap`. The existing implementation is `gmapp
 
 > ***BA*** We had our first conference call on Zoom with Dr. Barhorst today. We had an ID and password, and could record it. I'm not sure how big of a file it would be, but do you think it needs to be a secured meeting room? Also, would you want the recordings on the server or somewhere else?
 
+> ***JV*** I don't think we need to record it. But, we should keep a running file (or folder of files) with meeting notes. We want a structure something like:
+>
+> # mm/dd/yyyy
+> ## Discussion
+> * ...
+> * ...
+> 
+> ## Action Items
+> - [ ] Item - Primarily Responsible Member(s)
+> - [ ] Item - Primarily Responsible Member(s)
+
 ## Controller Design
 The two leading frontrunners for control methods are MPC and Model Reference Control. In either case, only one person (myself or Gerald) are familiar enough to implement each method, respectively.
+
+> ***JV** What model would you use for the Model Reference? For it, you could look at the 2016 and 2018 U Florida RobotX team reports. They use Model Refernce on their WAM-V with an X-thruster config:
+>
+> * https://robotx.org/programs/2016-robotx-challenge/
+> * https://robotx.org/programs/2018-robotx-challenge/
+> 
+> Their code is also available: https://github.com/uf-mil/mil/tree/master/NaviGator
+
 
 ## High Level System Architecture
 Similar to when I was working on the `rqt_graph` for `C-Interceptor`, I attempted a sketch of what I think needs to be on RoboBoat. I came up with the following:
@@ -41,6 +62,8 @@ I have a node for the ZED in the upper-left corner of the graph that is publishi
 ### Robot Config
 Below the `Image Classification` subsystem is a `Robot Config` subsystem. This includes the frame definitions in a `.yaml` file, `velocity_limits` and `acceleration_limits` that are passed to the `Path Planner`, and the sensor configuration consisting of the `LiDAR`, `ZED`, and `IMS`. I currently have the frames being published to a `tf` node that then goes to the `EKF`. I also have the sensor messages pertaining to pose/odometry information routed to the `EKF` node, but I'm not sure if they should be routed to the `tf` node first.
 
+> ***JV*** Once we (I?) get the `roboboat_description` package finished, the static transforms (sensor locations on the boat, etc) should be taken care of by it. 
+
 ### Obstacle Avoidance
 The output of the EKF is published to the `map` node, which produces a dynamic map of the environment. The `map` node also receives depth information  information from `/depth/depth_registered` from the `ZED` as part of the `Image Classification` subsystem. The dynamic map, along with the `velocity_limits` and `acceleration_limits` from `Robot Config` are passed to the `Path Planner` node. The `Path Planner` then outputs a `cmd_vel` `Twist()` message to the `Control` subsystem and the `generate_desired_states` node.
 
@@ -49,8 +72,12 @@ The control subsystem consists of a controller node, currently debating between 
 
 Inbetween the pass to the `Motor PWM` node, the `ctrl_allocation` node makes a call to the `E-Stop Service`, asking if the current `E-Stop` state is good or bad. If it is bad, then `/motor_cmds` will publish a series of zeros.
 
+> ***JV*** We also need to consider remote control here. You can/should look into the `twist_mux` package - http://wiki.ros.org/twist_mux. The overview is pretty good. You can also look in the [Husky repository](https://github.com/husky/husky), in the `husky_control` subfolder for an example configuration.
+
 ### State Machine
 I'm still learning about how these work, but I think that we can have each task we are attempting as a check-off so that we don't accidentally repeat tasks while we're searching for the next objective. I have this currently publishing to the `generate_desired_states` node, but I'm not really sure what it should be doing, in all honesty.
+
+> ***JV*** The example/tutorial in the ROS book is a pretty good one. 
 
 ## Enclosure
 No word from my (Ben) friend after he allegedly reached out to his suppliers he uses.
@@ -74,18 +101,38 @@ I have also started looking at different examples of water-cooled systems for pc
 #### Next Steps
 ##### Box
 1. Get clarification on what’s expected for the IP/NEMA ratings and level of weatherproofing needed.
+
+> ***JV*** For the WAM-V, we bought nearly all IP-67 rated connectors, etc. The new WAM-V enclosure is _definitely_ not that though. Keep in mind that they do keep running if it's raining, but not lightning:
+>
+> * https://flic.kr/p/2gkyjX8
+> * https://flic.kr/p/2gkyjQu
+> * https://flic.kr/p/2gkyunT 
+
 2. Continue to look for boxes that fit the size requirements while meeting the NEMA rating requirements
 
 ##### Water cooling
 1. Get feedback from Dr. Vaughan on ideas for water cooling system
+
+> ***JV*** Would the radiator exchange enough heat to be worth the complexity? What if we instead, treated the base mounting plate as a huge heat sink and just tried to better cool it? (We basically do this now, but make no effort to cool it, so the heat has no way to escape.)
+
 2. Sketch ideas of complete system with approximate dimensions
 3. Do fluid and thermodynamic calculations to see if system could work and if it removes enough heat to be worth the added weight and battery consumption
 
+> ***JV*** Yes. Just rough approximations should be enough to get us to a decision.
+
 #### My Concerns and Questions
 1. Amount of battery power the fan would use
+
+> ***JV*** A fan would probably be near-zero relative to the thrusters and computing.
+
 2. Do we would need a pump to pull the water in from the lake? If so, the same concern applies here.
+
+> ***JV*** A pump would take more than the fan, but still probably less than the thrusters. Please check my intuition on this.
+
 3. Weight and cost
 4. If we don’t “need” a pump to circulate the water while the boat is moving due to the forward motion of the boat, should we still use one? The possibility of overheating while the boat is sitting and still operational should be taken into consideration.
+
+> ***JV*** There are long-ish periods of time where the boat is either not moving or moving very slowly. So, I'm not sure that we can rely on the boat's motion to regularly "pump" water.
 
 #### Expected Results
 Have found a box to present to the group for review
