Comments for RoboBoat - 2020_04_01 Report

--- a/Internal Reporting/RoboBoat - 2020_04_01/RoboBoat - 2020_04_01.md
+++ b/Internal Reporting/RoboBoat - 2020_04_01/RoboBoat - 2020_04_01.md
@@ -16,6 +16,10 @@ Members:
 # Team Meetings
 I'm sorry about how Tuesday went -- I'm going to start sending out emails *and* Slack messages on Monday mornings.
 
+> ***JV*** Ben, No worries. 
+
+> ***JV*** To those that didn't make it, please do so in the future. If you can't, please let Ben and me know in advance that you will not be able to and provide information/questions to Ben in writing, so he can address them with the team in your absence.
+
 # RoboBoat System Design
 ## Mapping and Navigation System Design
 ### Team Lead: Benjamin Armentor
@@ -24,6 +28,8 @@ I'm sorry about how Tuesday went -- I'm going to start sending out emails *and* 
 2. Dallas Mitchell
 
 > ***BA*** I will start messing around with rtabmap on Friday. Friday is now my dedicated RoboBoat work day. I konw that I need to work on it more often than that, too.
+
+> ***JV*** Let me know how it goes. I've been using it for some of my work here.
 
 > ***BA*** I asked for my personal team to split their duties into a RoboBoat report and team report. This was the result, broken up as best as I can.
 
@@ -37,11 +43,15 @@ I have successfully reinstalled everything and will begin back on the `turtlebot
 
 > ***BA*** I'm going to work together with Nathan on this.
 
+> ***JV*** Okay. Nathan, how are the TurtleBot tutorials going? The ["in simulation"](http://learn.turtlebot.com) ones cover a lot of the topics that you'll need to know for RoboBoat. Be sure to look at the code they are using, not just run the launch files. You should be able to just sub in `melodic` for `kinetic`.
+
 ### Plan for the next two weeks
 #### What are your next steps?
 > ***NM*** The next steps would be finish the last of the `turtlebot`tuturials. Then, I will try to implement my understanding of ROS and `RTABMAP` to create initial code for the `ZED` and `Hyoku Lidar`.
 
 > ***BA*** My next step is to read about `rtabmap`, since I haven't looked at any of the API, just what it can do, which is why I think it's the most promising/well-suited to our system. I don't think it'll be too much of a pain to work with.
+
+> ***JV*** It's not bad. Please let me know if you have questions. As I said, I've been using it some here.
 
 #### What work do you expect to have done by the next report? What results do you expect?
 > ***NM*** I expect to have an understanding of how `RTABMAP` works and base code for the system.
@@ -53,7 +63,19 @@ I have successfully reinstalled everything and will begin back on the `turtlebot
 #### Additional Members
 1. Thomas Poche
 
-Are the images fully uploaded to begin being labeled? Dallas told me (Ben) that he was under the impression that the service you linked actually labeled the images for us, but I don't think that's the case. Can you please clarify?
+Are the images fully uploaded to begin being labeled? 
+
+> ***JV*** I've been talking to their support. They can't quite figure out why our labels are showing up either, yet. 
+
+Dallas told me (Ben) that he was under the impression that the service you linked actually labeled the images for us, but I don't think that's the case. Can you please clarify?
+
+> ***JV*** Our labeling pipeline/timeline is this. I labeled about 500 images from RoboBoat. Using those, I used transfer learning from the baseline YOLO (among others) model to provide tentative labels for another 2000 (so 2500 total). I then tuned those labels manually, to correct for incorrect labels, fix positioning, and add missing labels. Then, I retrained the model using the full set of 2500. It is that model that has provided *tenative* labels for the 2018 RobotX images we have, some of which have been further tuned by Thomas and Rebecca and *tenative* labels for the images we have from last year's RoboBoat contest. Those labels need to be manually tuned/corrected so that we can retrain the model. There are currently about 7,000 images labeled, which are sampled from a full set of ~25,000.
+>
+> We can repeat the correct, train, "auto-label", correct, train, "auto-label" process on sub-sets of those 7,000, so that, hopefully, we get to model that is "good enough" without us having to provide label corrections on all of them.
+>
+> If you have questions about this process, please let me know. It will likely be a sub-section of the technical report.
+
+
 
 ## Controller Design
 ### Team Lead: Benjamin Armentor
@@ -63,6 +85,8 @@ Are the images fully uploaded to begin being labeled? Dallas told me (Ben) that 
 3. Nathan Madsen
 
 Gerald and I have not had a discussion about this. I'm going to ask how he's coming along tomorrow, though I think that this will become more important after the navigation system is up and running.
+
+> ***JV*** Okay.
 
 ## Enclosure Design
 ### Team Lead: Joseph Stevens
@@ -84,6 +108,9 @@ Gerald and I have not had a discussion about this. I'm going to ask how he's com
 4. Temperature range of the Jetson = -13&deg;F to 176&deg;F
 5. Temperature range of the Pyboard = need to get exact model to find
 
+> ***JV*** We have a Raspberry Pi 3b+ in there currently. We can upgrade to a Raspberry Pi 4, if need be.
+
+
 ### Design Ideas
 1. "Pump and Dump" - Pump the water in from the lake. Use the water to cool the system through a heat exchanger attached to the aluminum base plate of the CPUs and dump the water back in to the lake. This method would collect fresh water at approximately 80 deg F while operating as a steady flow process.
 * Inlet and exit hoses should be designed in such a way to reduce drag and its negative effect on the dynamics of the boat to avoid unexpected complications with the controller.
@@ -91,6 +118,9 @@ a) An inlet hose should be placed at about center of mass under the box between 
 b) The exit hose should come out of the side of the box and not be submerged under water, like the inlet hose, but instead be curved down to allow the warm water to exit into the lake.
 *  Heat Exchanger Idea #1 - have a water cooling block attached to the bottom of the base plate consisting of one copper plate that makes direct contact with the aluminum base plate while the other exposed sides are insulated to ensure maximum heat transfer between the base plate and the cooling block.
 * Heat Exchanger Idea #2 - have an evaporator/radiator on the inside of the box up against the bottom of the aluminum base plate to absorb heat rather than a cooling block. This could eliminate concerns of cavitation.
+
+> ***JV*** The concern here is that the box itself is a fairly closed system. Where does the heat from the radiator go?
+
 a) Concerns:
 i). Area of coverage in comparison to previous idea being reduced and therefore reducing the effect of the heat transfer.
 ii). Possible increase in cost.
@@ -98,6 +128,8 @@ iii). May complicate system.
 * Heat Exchanger Idea #3 - Use copper piping.
 
 2. Radiator - Have a closed system with a radiator mounted on the outside of the box. Would require a fluid reservoir. The radiator would dissipate heat into the atmosphere while the atmosphere acted as a thermal energy reservoir. There would most likely need to be a fan attached to the radiator to circulate air through the fins when the boat is stopped.
+
+> ***JV*** What about running [heat pipes](https://en.wikipedia.org/wiki/Heat_pipe) from the baseplate to an external radiator? It's passive. The challenge, I think, would be getting the heat pipes in the configuration/size we need.
 
 3. Air cooled system.
 4. Intake and Exhaust.
@@ -108,6 +140,10 @@ iii). May complicate system.
 [Something like this](https://www.newegg.com/p/1YF-009M-001J3?Description=blower%20fan&cm_re=blower_fan-_-9SIA27CAK71375-_-Product)
 [Or like this](https://www.newegg.com/nonoise-g5015m12d1-6-fans/p/1YF-002N-00090?Item=9SIA6254FA5101&quicklink=true)
 There is another one on McMASTER-CARR but it's relatively expensive. Although, I do plan on using this in the Solidworks assembly of the system. To view this fan click [here.](https://www.mcmaster.com/9602k41)
+
+> ***JV*** Search `120mm CPU fan` and `140mm CPU fan` on Amazon or NewEgg and you'll find the types of fans we'd want to use, I think. I think Noctua is the top-rated brand for CPU fans.
+
+
 * Possible safety system with two closing flaps shuts off all outside environments when IMU board indicates tipping past a certain point.
 * Water resistant membrane that allows air flow.
 
