Comments for RoboBoat - 2020_04_29 Report

--- a/Internal Reporting/RoboBoat - 2020_04_29/RoboBoat - 2020_04_29.md
+++ b/Internal Reporting/RoboBoat - 2020_04_29/RoboBoat - 2020_04_29.md
@@ -15,9 +15,19 @@ Members:
 
 I don't really have much to say here. I'm planning on looking at the GitHub website design tools Friday after my 10:00 lecture, if we have one. I also have not yet looked up any of the past videos from prevous years' competitions.
 
+> ***JV*** I haven't done a GitHub site before, but it appears fairly straightforward. Please let me know how it goes.
+
 RoboNation has not yet uploaded submission instructions to answer any of our questions from the Tuesday meeting.
 
-I think the best course of action is to develop a high-level technical report outline, which I'll also do Friday, post it in Markdown form in this report, and assign team members to certain sections that correspond to what they should have been working on. This should be something like the following that I've been using for past reports, with a few additional sections as needed to describe the physical components, sensor suite, etc. I'll also utilize prior teams' reports for inspiration on this.
+> ***JV*** Why don't you drop a question in the RoboBoat forum?
+
+I think the best course of action is to develop a high-level technical report outline, which I'll also do Friday, post it in Markdown form in this report, 
+
+> ***JV*** Create a separate folder in this repository for it.
+
+and assign team members to certain sections that correspond to what they should have been working on. This should be something like the following that I've been using for past reports, with a few additional sections as needed to describe the physical components, sensor suite, etc. I'll also utilize prior teams' reports for inspiration on this.
+
+> ***JV*** I think it's okay to divide up this way on the surface. However, I think the team is small enough that everyone can and should have fairly good knowledge about the entire project. You can specialize in an area, but should know the whole thing. It's okay to start out not knowing; just work to learn the parts you don't know. Getting exposure to and learning about aspects of system design and integration is one of the best parts of these projects.
 
 # RoboBoat System Design
 ## Mapping and Navigation System Design
