--- a/Technical Report/TDR/RoboBoat2020_TDR.tex
+++ b/Technical Report/TDR/RoboBoat2020_TDR.tex
@@ -40,33 +40,34 @@
 \section{abstract}
 This report discusses the motivations behind design choices and improvements to the University of Louisiana at Lafayette's first entry to RoboNation's RoboBoat Competition in 2019. Due to restrictions on group gatherings and university resources, this design has not been physically constructed.  The Ragin' Cajuns RoboBoat is a catamaran-style vessel equipped with four thrusters in an ``X"-Configuration, enabling holonomic motion. The computer network communicates with individual components via the Robot Operating System (ROS) protocol. The main contributions from the 2020 Ragin' Cajuns RoboBoat team include a new control method, procurement of a larger electronics enclosure, and upgrading the computer vision hardware, and creating a physics simulation of the system in Gazebo.
 \section{Competition Strategy}
-The 2020 RoboBoat competition requires teams to build an Autonomous Surface Vessel (ASV) capable of performing a variety of tasks. For an ASV to accomplish these tasks, several subsystems must function together. This section will discuss the 2020 Ragin' Cajun RoboBoat team's approach to completing the tasks set out by RoboNation for this year's competition.
+The 2020 RoboBoat competition requires teams to build an Autonomous Surface Vessel (ASV) capable of performing a variety of tasks. For an ASV to accomplish these tasks, several subsystems must function together. This section will discuss the 2020 Ragin' Cajun RoboBoat team's approach to completing the tasks set out by RoboNation for this year's competition. The following subsections are in the order that the tasks would be attempted.
 
 \subsection{Navigation Channel}
 \label{NavigationChannel}
-To demonstrate autonomy and ensure some level of course safety, this task is mandatory and must be completed before any other tasks can be attempted. The ASV must pass through two sets of gates. Each gate consists of two buoys at least six feet apart. The two sets of buoys are at least 50 feet apart. The Ragin' Cajuns RoboBoat is equipped with a stereoscopic camera that provides images to an image classifier trained by a Convolution Neural Network (CNN). The training set for this CNN consists of manually-labeled images from the previous competition, as well as images from the 2016 Maritime RobotX Competition. The output of the image classifier is made available to a state machine that determines how the ASV should maneuver. For the Navigation Channel task, the state machine directs the ASV to ...
+To demonstrate autonomy and ensure some level of course safety, this task is mandatory and must be completed before any other tasks can be attempted. The ASV must pass through two sets of gates. Each gate consists of two buoys at least six feet apart. The two sets of buoys are at least 50 feet apart. The Ragin' Cajuns RoboBoat is equipped with a stereoscopic camera that provides images to an image classifier trained by a Convolution Neural Network (CNN). The training set for this CNN consists of manually-labeled images from the previous competition, as well as images from the 2016 Maritime RobotX Competition. The output of the image classifier is made available to a state machine that determines how the ASV should maneuver. For the Navigation Channel task, the state machine directs the ASV to find a gate, identified with green in the right side of the frame and red in the left. A waypoint goal is sent to the navigation stack to maneuver to the middle of the gate and orient the vessel to be in-line with the channel. The state machine instructs the ASV to maintain the initial heading as it continues to drive forward and look for the exit gate. Another waypoint between the exit gate is sent to the navigation stack as a target location. As the vessel reaches this waypoint, it completes the Navigation Channel and proceeds to the next task.
+
+\subsection{Acoustic Docking}
+This task requires the ASV to localize a signal and dock in its location. Once the Navigation Channel task has been successfully completed, the state machine instructs the ASV to maneuver to the GPS coordinate provided for the entrance to the Acoustic Docking task, avoiding potential obstacles along the way. Once the ASV arrives at the docking station, two hydrophones are deployed from the vessel's stern using a linear actuator. The ASV then circumnavigates the dock to generate a map of the area.  Hydrophone feedback is processed to localize the active acoustic beacon and record its location. Once the signal has been located, if the docking station is not in view, the state machine will prescribe a waypoint away from the dock and instruct the ASV to adjust its heading to see the circle, cruciform, or triangle symbol associated with the recorded location. This symbol is identified using the image classifier and recorded, as it may affect the tasks that follow. The recorded location of the active acoustic beacon is then used as a waypoint to maneuver back to the dock. When the ASV has reached the target location, docking will commence. The ASV will station keep in the dock for five to ten seconds to confirm that it has successfully docked, and then exit the dock by setting the GPS coordinates for the Obstacle Channel task as its next waypoint.
 
 \subsection{Obstacle Channel}
 \label{ObstacleChannel}
-The obstacle channel requires the ASV to maneuver through a series of gates with obstacle buoys along the trajectory. Unlike the Navigation Channel task, these gates are arranged in a non-linear trajectory. Because the Ragin' Cajun RoboBoat hull footprint is large, this task may be difficult to complete. However, our ASV is also equipped with a holonomic thruster configuration. This allows the ASV to exert forces and moments in each degree of freedom independently. This increased maneuverability, along with restrictions on maximum allowable velocities, should aid the Ragin' Cajun RoboBoat to complete this task. 
+The obstacle channel requires the ASV to maneuver through a series of gates with obstacle buoys along the trajectory. Unlike the Navigation Channel task, these gates are arranged in a non-linear trajectory. Because the Ragin' Cajun RoboBoat hull footprint is large, this task may be difficult to complete. However, our ASV is also equipped with a holonomic thruster configuration. This allows the ASV to exert forces and moments in each degree of freedom independently. This increased maneuverability, along with restrictions on maximum allowable velocities, should aid the Ragin' Cajun RoboBoat to complete this task. Once the ASV has arrived at this task from the Acoustic Docking station, the state machine will be checking for buoy color. It will be looking for green buoys in the right side of the image and red buoys in the right to identify the gates. The vision feedback system provided to the navigation stack will prevent the ASV from colliding with these green and red buoys as well as the yellow obstacle buoys. Waypoints are recursively placed at the middle of the gates. In order to know that the task has been completed, the GPS coordinate for the Obstacle Field task is iteratively appended to the waypoint sequence. When no more gates are in the field of view, the ASV will begin maneuvering to the Obstacle Field task because this waypoint is the last in the sequence. If red and green buoys in the Obstacle Field are misinterpreted as gates, the path planner will prevent the ASV from entering a region that it cannot fit because it knows the base footprint area.
 
 \subsection{Obstacle Field}
 \label{ObstacleField}
-This task is similar to the Obstacle Channel task, but instead of gates, there is one ``Pill Buoy", which has distinguished markings, that the ASV must circumnavigate. This buoy is surrounded by several obstacles spaced as little as four feet apart. The Ragin' Cajun RoboBoat team's approach to this task is handled by collaboration between the high-level state machine and the path planner. The state machine will determine that the ASV is at the Obstacle Field by first identifying the Pill Buoy in the cameras' field of view. The state machine will then place a waypoint toward the Pill Buoy to motivate the ASV to approach it. The path planner will then plan a trajectory through the obstacles while maintaining a safe distance from obstacles that is manually prescribed. This value is chosen as smaller than 50\% of the difference between the minimum specified distance between obstacles the ASV can pass through, four feet, and the beam width of the Ragin' Cajun RoboBoat. When the ASV has entered the obstacle field, the state machine will command the path planner to circumnavigate the obstacle. Once the obstacle has been circled, and the ASV has changed its heading by at least 360$^\circ$, the ASV will exit the obstacle field out of a pair of obstacles the computer vision system and path planner find wide enough for the ASV to fit.
-\subsection{Acoustic Docking}
-TBD if any development is made here. Or, recycle the 2019 docking strategy (I think there was one?)
+This task is attempted immediately after the Obstacle Channel task. The Obstacle Field task is similar to the Obstacle Channel, but instead of gates, there is one ``Pill Buoy", which has distinguished markings, that the ASV must circumnavigate. This buoy is surrounded by several obstacles spaced as little as four feet apart. The Ragin' Cajun RoboBoat team's approach to this task is handled by collaboration between the high-level state machine and the path planner. The state machine will determine that the ASV is at the Obstacle Field by first identifying the Pill Buoy in the cameras' field of view. The state machine will then place a waypoint toward the Pill Buoy to motivate the ASV to approach it. An entrance to the Obstacle Field is found by circumnavigating the field of buoys, iteratively updating the largest distance identified between the adjacent buoys. The path planner will then plan a trajectory through the obstacles while maintaining a safe distance from obstacles that is manually prescribed. This value is chosen as smaller than 50\% of the difference between the minimum specified distance between obstacles the ASV can pass through, four feet, and the beam width of the Ragin' Cajun RoboBoat. When the ASV has entered the Obstacle Field the current position is recorded, the state machine will command the path planner to circumnavigate the obstacle by placing waypoints around it. Once the Pill Buoy has been circled, and the ASV has changed its heading by at least 360$^\circ$, the ASV will exit the Obstacle Field using the recorded position as the last waypoint  and locating of a pair of buoys the computer vision system and path planner find wide enough for the ASV to fit.
+
+\subsection{Speed Gate}
+\label{SpeedGate}
+After the obstacle field has been successfully escaped, the ASV will maneuver to the GPS coordinate provided for the Speed Gate entrance. This task introduces a race element to the competition. The ASV is required to enter through a gate, travel to a buoy and circle it, and return through the gate as quickly as possible. Because of the new enclosure that was procured for this competition, the ASV thrust-to-weight ratio has decreased, hurting our possible performance at this task. However, the new optimal control strategy implemented for this year's competition may be more effective than the velocity controller used at the previous competition. Additionally, the state machine overrides the velocity restrictions placed on the ASV by the path planner for this task so it can be completed as quickly as possible. A waypoint is placed at the gate entrance, and then the state machine instructs the ASV to pass through the gate at maximum speed. Once the target buoy has been located, waypoints are placed around it to it can be circumnavigated. The initial position at the gate is used as the final waypoint to guide the ASV out of the Speed Gate Challenge.
+
+\subsection{Return to Dock}
+\label{ReturnToDock}
+Once all other tasks have been completed, the final task the ASV can complete is returning to the starting point of the course without encountering any obstacles. The ASV must pass through its own course, and not another where other vessels are competing. This is accomplished by recording the starting position upon entering the water, and then upon completing the final competition task, activating that saved location as a waypoint. While the ASV is completing other competition tasks, it will also be generating a map of the environment. In conjunction with its localization and path planning capabilities, this will be used to maneuver the ASV back to the starting dock.
 
 \subsection{Object Delivery}
 \label{ObjectDelivery}
 This task requires the ASV to deliver up to four objects to a specified area in the course. The task may be completed solely by the ASV or by a combination of an ASV or Unmanned Aerial Vehicle (UAV). The 2020 Ragin' Cajun RoboBoat team declined to develop this task to focus on other hardware and software upgrades. Should a task like this be introduced in future competitions, the Ragin' Cajun RoboBoat would have been tasked with collecting images of the new course elements to enhance the image classifier training set, which currently has a limited supply of dock-like images.
-
-\subsection{Speed Gate}
-\label{SpeedGate}
-This task introduces a race element to the competition. The ASV is required to enter through a gate, travel to a buoy and circle it, and return through the gate as quickly as possible. Because of the new enclosure that was procured for this competition, the ASV thrust-to-weight ratio has decreased, hurting our possible performance at this task. However, the new optimal control strategy implemented for this year's competition may be more effective than the velocity controller used at the previous competition. Additionally, the state machine overrides the velocity restrictions placed on the ASV by the path planner for this task.
-
-\subsection{Return to Dock}
-\label{ReturnToDock}
-Once all other tasks have been completed, the final task the ASV can complete is returning to the starting point of the course without encountering any obstacles. The ASV must pass through its own course, and not another where other vessels are competing. This is accomplished by recording the starting position, and then upon completing the final competition task, activating that saved location as a waypoint. While the ASV is completing other competition tasks, it will also be generating a map of the environment. Iin conjunction with its localization and path planning capabilities, this will be used to maneuver the ASV back to the starting dock.
 
 \section{Design Creativity}
 \section{Experimental Results}
