--- a/Technical Report/TDR/RoboBoat2020_TDR.tex
+++ b/Technical Report/TDR/RoboBoat2020_TDR.tex
@@ -39,6 +39,7 @@
 \thispagestyle{empty}
 \section{abstract}
 This report discusses the motivations behind design choices and improvements to the University of Louisiana at Lafayette's first entry to RoboNation's RoboBoat Competition in 2019. Due to restrictions on group gatherings and university resources, this design has not been physically constructed.  The Ragin' Cajuns RoboBoat is a catamaran-style vessel equipped with four thrusters in an ``X"-Configuration, enabling holonomic motion. The computer network communicates with individual components via the Robot Operating System (ROS) protocol. The main contributions from the 2020 Ragin' Cajuns RoboBoat team include a new control method, procurement of a larger electronics enclosure, and upgrading the computer vision hardware, and creating a physics simulation of the system in Gazebo.
+
 \section{Competition Strategy}
 The 2020 RoboBoat competition requires teams to build an Autonomous Surface Vessel (ASV) capable of performing a variety of tasks. For an ASV to accomplish these tasks, several subsystems must function together. This section will discuss the 2020 Ragin' Cajun RoboBoat team's approach to completing the tasks set out by RoboNation for this year's competition. The following subsections are in the order that the tasks would be attempted.
 
@@ -70,8 +71,61 @@ Once all other tasks have been completed, the final task the ASV can complete is
 This task requires the ASV to deliver up to four objects to a specified area in the course. The task may be completed solely by the ASV or by a combination of an ASV or Unmanned Aerial Vehicle (UAV). The 2020 Ragin' Cajun RoboBoat team declined to develop this task to focus on other hardware and software upgrades. Should a task like this be introduced in future competitions, the Ragin' Cajun RoboBoat would have been tasked with collecting images of the new course elements to enhance the image classifier training set, which currently has a limited supply of dock-like images.
 
 \section{Design Creativity}
+\subsection{Thrust Configuration}
+\subsection{Control Strategy}
+\subsection{Thermal Energy Management}
 \section{Experimental Results}
+\subsection{Pool Testing}
+\subsection{System Simulation}
+\subsubsection{Gazebo}
+\subsubsection{SolidWorks FLOW}
 \section{Acknowledgments}
+This project would not be possible without the guidance and support of our Coach, Dr. Joshua Vaughan. The team would like to thank him for his patience with us and willingness to assist us wherever possible. The 2020 Ragin' Cajun RoboBoat team would also like to thank Hammond Manufacturing and AWC, Inc. for their generous donation of a new and improved electronics enclosure. The team was unable to install it because of restricted access to university facilities, but it will make its debut in the 2021 Ragin' Cajun RoboBoat entry.
+\newpage
+\onecolumn
 \begin{appendix}
+\begin{center}
+\begin{longtable}{lccccc}
+\caption{Ragin' Cajun RoboBoat Specifications}\\
+\label{SpecSheet}
+\textbf{Category} & \textbf{Item} & \textbf{Vendor}& \textbf{Specifications} & \textbf{Quantity} & \textbf{Price (USD)}\\
+\hline
+\\
+Battery & Turnigy 4S Li-Po & Turnigy & \begin{tabular}{c}16V\\ 5200 mAh \\ 450g \end{tabular} & 4 & 53.96\\
+\\
+Battery & Floureon 3s Li-Po & Floureon & \begin{tabular}{c}12V \\ 4500 maH \\ 324.5g \end{tabular} & 2 & 33.29\\
+\\
+Communication & TL-WA901ND & TP-Link & \begin{tabular}{c} 2.4-2.4835 GHz \\ 270m range \\ 12V, 1A \\ 5.8W\end{tabular} & 1 & 37.99\\
+\\
+Computing & Raspberry Pi 3B+ & Raspberry Pi & \begin{tabular}{c} Broadcom BCM837B0 \\ ARMv8, 1.4 Ghz \\ 1GB LPDDR2 SDRAM\end{tabular} & 2 & 35.00\\
+\\
+Computing & Jetson TX2 & NVIDIA & \begin{tabular}{c} 256 CUDA Core (GPU) \\ Dual-Core Denver 2 \\ Quad-Core Cortex-A57\\8GB 128-bit LPDDR4 RAM  \end{tabular} & 2 & 629.99\\
+\\
+Enclosure & PJ24208RT & Hammond MFG & \begin{tabular}{c} 0.064 $\text{m}^3$ \\ Fiberglass \\ 11 kg \end{tabular} & 1 & Donated\\
+\\
+Hull & \begin{tabular}{c}Fiberglass\\Cloth\end{tabular} & TotalBoat & 6 $\frac{\text{oz}}{\text{yard}^2}$ & 10.56 $\text{yard}^2$ & 56.01\\
+\\
+Hull & Epoxy & TotalBoat & 1.18 $\frac{\text{g}}{\text{cm}^3}$ & 4.31 kg & 126.99\\
+\\
+Hull & \begin{tabular}{c}Fairing\\Compound\end{tabular} & TotalBoat & 1.32 $\frac{\text{g}}{\text{cm}^3}$ & 2.27 kg & 56.99\\
+\\
+Propulsion & T-200 & Blue Robotics & \begin{tabular}{c} $\left[-4.1, 5.25\right]$ kgf (16V) \\ 76mm Propeller \\ 156g (in water) \\ 390W, 24 A (max)\end{tabular} & 4 & 169.00\\
+\\
+Propulsion  & \begin{tabular}{c}Speed\\Controllers\end{tabular} & Blue Robotics & \begin{tabular}{c}16.3g \\ 7--26V \\ 30A (max) \\$\left[1100,1900\right]$ $\mu$s Pulse Range \end{tabular} & 4 & 25.00\\
+\\
+Sensing & \begin{tabular}{c}H2C\\Hydrophone\end{tabular} & Aquarian Audio & \begin{tabular}{c} $\left(0.01, 100\right)$ KHz\\ 0.3mA Consumption \\ $2$K$\Omega$ Impedance \\ Omnidirectional Sensing\\ 25mm x 58mm\\ 51g\\ Operate $\leq$ 80 meters\end{tabular} & 2 & 169.00\\
+\\
+Sensing & Scarlet 2i2 & Focusrite & \begin{tabular}{c} $\left(0.02, 20) KHz\\ 1.5M$\Omega$ \end{tabular} & 1 & 159.99\\
+\\
+Sensing & UM6 IMU & CH Robotics & \begin{tabular}{c} 500 Hz\\  $\leq 2^\circ$ Pitch, Roll Precision\\ $\leq 5^\circ$ Yaw Precision\\ 5V\\ $\pm2000^\circ$/s rotation rates\\ $\pm 2g$ acceleration\end{tabular} & 1 & 1260.00\\
+\\
+Sensing & \begin{tabular}{c}Ultimate GPS\\Breakout V3\end{tabular} & Adafruit & \begin{tabular}{c} 66 Channels \\ 10 Hz \\ 5V, 20mA\end{tabular} & 1 & 39.95\\
+\\
+Vision & UTM-30-LX-EW & Hokuyo & \begin{tabular}{c} $270^\circ$ FOV \\ 2D Projection \\ 30 meter range \\ 100 Hz \end{tabular} & 2 & 4900.00\\
+\\
+Vision & \begin{tabular}{c}ZED\\Stereo Camera \end{tabular}& Stereolabs & \begin{tabular}{c} 4MP \\ 1080p HD @ 30 FPS\\ WVGA @ 100 FPS \\ 380mA / 5V \\ 170g \\ $90^\circ$ H, $60^\circ$ V, $100^\circ$ D FOV\end{tabular} & 2 & 449.00\\
+\\
+\end{longtable}
+\end{center}
 \end{appendix}
 \end{document}
